Added initial version of vertical zoom buttons
Fixed: Play area arrows look incorrect at small magnitudes
Hide the blue timeline bar when chart playback cursor can be used instead
Added a deceleration spike when accelerating into a wall
Fixed: Clicking on a slider with value 10000+ causes blocky areas to turn white, transform or NaN exception?
Aligned chart go button with right edge of other controls instead of centered
Switched out-of-range slider indication from thumb rotation to thumb transparency
Switched play area slider thumbs from arrows to bars
Centered play area in introduction control panel
Fixed: Chart control "go" button should have correct behavior during playback (instead of just recording)
Fixed: Chart control "go" button should also behave as a pause button instead of disappearing.
record-and-playback: 6/13/2010 Layout improvements for RecordAndPlaybackControlPanel
Added a reset all button
# 0.00.02 (41563) Jun 11, 2010
Fixed: position slider does not play back values
Added a workaround to prevent high frequency oscillation of derivatives around +/- 1E-12
Performance improvements in model
Added a go button icon to the driving variable, when the sim is paused
Fixed: Chart cursor drag + display should respect dynamic chart size
Fixed: Chart cursor node should disappear when chart minimized
Added out-of-range sliders for vertical sliders (with thumb rotation) on chart tab
Fixed a bug in the man drag handler
Fixed: Stop recording data after 20 seconds to avoid leaking
Fixed: Dragging man should be absolute, not relative, so the mouse doesn't get offset after wall collision
# 0.00.01 (41532) Jun 10, 2010
Fixed: If the user sets acceleration and velocity then presses go, should switch to acceleration mode so the acceleration is not overwritten (and same for velocity)
Added slider arrow rotation to indicate value-out-of-slider-range, while still enabling control over the values