@@ -86,4 +86,8 @@ public class MutableRectangle extends SimpleObservable {
     public Rectangle2D.Double toRectangle2D(){
         return new Rectangle2D.Double(x,y,width, height);
     }
+
+    public double getMaxX() {
+        return x+width;
+    }
 }
